1998-11-26  Harri Porten  <porten@kde.org>

	* included errno.h in opener.cpp and modified CMSG_DATA()'s
	argument (as suggested by Andreas Pour).
	* had to revert to SOCK_DGRAM since I keep getting failed
	assertions. Using a stream seems to require some attention in
	terms of ensuring that the correct length is received.

1998-11-26  Mario Weilguni <mweilguni@kde.org>
	
	* added missing rules for Switzerland, and added kppp.sh
	* replace SOCK_DGRAM by SOCK_STREAM, and hope that it works

1998-11-26  Harri Porten  <porten@kde.org>

	* requester.cpp: made the ifdef's for cmsg_data more portable
	* requester.cpp, opener.cpp: include sys/uio.h to define struct
	iovec. As far as I can see this should work for systems with and
	without glibc. If it doesn't, please mail me directly.
 
1998-11-25  Mario Weilguni <mweilguni@kde.org>

	* fixed a lot of rulefiles. Pentecost Monday is NOT easter+60,
	  but easter+50. My TEMPLATE file contained this bug,
	  and unfortunatly a lot of people copied it.
	* improved and new Switzerland rulefiles

1998-11-24  Harri Porten  <porten@kde.org>

	* main.cpp: store pid of setuid child in PPPData object
        * define KERNEL_VERSION()

1998-11-24  Mario Weilguni <mweilguni@kde.org>

	* fixed opener.cpp for Linux >= 2.1.0
	* removed PAP_UsePAP(), no longer needed

1998-11-23  Harri Porten  <porten@kde.org>

	* requester.cpp: removed ancient #include "requester.moc"

1998-11-22  Harri Porten  <porten@kde.org>

	* main.cpp: fixed freeze on disconnect by using waitpid(...,
	WNOHANG) instead of wait()
	* main.cpp: forgot to convert gpppdata.password to char*
	* opener.cpp: close file descriptors after being sent. Left out
	dup() call. Did it serve any special purpose ?
	* opener.h: increased allow size for username and passwords
	* modem.cpp: included config.h for HAVE_USLEEP
	(thanks to hpj.lisa@t-online.de (hpj) for reporting this)
	* PAP/CHAP: fixed typo and return value
		
1998-11-20  Harri Porten  <porten@kde.org>
